<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:baselineAligned="false"
    android:paddingBottom="25dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="25dp"
    android:shrinkColumns="*"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/node_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightRed2"
            android:gravity="center"
            android:text="@string/nodeId"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/node_id_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightRed2"
            android:gravity="center"
            android:text=""
            android:textSize="14dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/hostname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue2"
            android:gravity="center"
            android:text="@string/hostName"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/hostname_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue2"
            android:gravity="center"
            android:text=""
            android:textSize="14dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightRed2"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/description_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightRed2"
            android:gravity="center"
            android:text=""
            android:textSize="14dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/firstSeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue2"
            android:gravity="center"
            android:text="@string/firstSeen"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/firstSeen_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue2"
            android:gravity="center"
            android:text=""
            android:textSize="14dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/lastSeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightRed2"
            android:gravity="center"
            android:text="@string/lastSeen"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/lastSeen_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightRed2"
            android:gravity="center"
            android:text=""
            android:textSize="14dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/uptime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue2"
            android:gravity="center"
            android:text="@string/uptime"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/uptime_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue2"
            android:gravity="center"
            android:text=""
            android:textSize="14dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/isOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightRed2"
            android:gravity="center"
            android:text="@string/online"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/isOnline_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightRed2"
            android:gravity="center"
            android:text=""
            android:textSize="14dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue2"
            android:gravity="center"
            android:text="@string/distance"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/distance_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue2"
            android:gravity="center"
            android:text=""
            android:textSize="14dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightRed2"
            android:gravity="center"
            android:text="@string/altitude"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/altitude_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightRed2"
            android:gravity="center"
            android:text=""
            android:textSize="14dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/clients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue2"
            android:gravity="center"
            android:text="@string/clientsCount"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/clients_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue2"
            android:gravity="center"
            android:text=""
            android:textSize="14dp" />

    </TableRow>

</TableLayout>